# rag-implementation-gemini

./: .gitignore  README.md  ingest_docs.py  main.py  pyproject.toml  rag_query.py  streamlit_app.py
docs/: doc1.txt  doc2.txt  doc3.txt  doc4.txt
